# ai-teaching-system

./: INSTRUCTIONS.md
docs/: assignment-module-audit.md
docs/plans/: 2026-03-25-teacher-assignment-module.md  2026-03-29-admin-assignment-module.md
docs/prd/: admin-assignment-module.md  analytics-module.md  course-module.md  question-ai-tutor.md  student-assignment-module.md  teacher-assignment-module.md
docs/pre/: course-module.md  teacher-assignment-module.md
server/: .env.example  pyproject.toml
server/data/: agno.db
server/src/: app.py
server/src/api/: analytics.py  assignments.py
server/src/api/middlewares/: agui_session.py
server/src/core/: settings.py
server/src/services/: agent_builder.py  assignment_generator.py  assignment_grader.py  file_extractor.py  learning_analytics.py  question_tutor.py  session_service.py  title_generator.py
server/tests/bdd/: conftest.py  test_assignment_generation.py  test_assignment_grading.py  test_file_processing.py
server/tests/bdd/features/: assignment_generation.feature  assignment_grading.feature  file_processing.feature
server/tests/core/: test_assignment_sql_contract.py  test_settings.py
server/tests/middleware/: test_agui_session_middleware.py
server/tests/services/: test_assignment_generator.py  test_assignment_grader.py
supabase/migrations/: 20260314_courses.sql  20260314_init.sql  20260325_assignments.sql  20260326_assignments_fix.sql  20260327_deepseek_model.sql  20260327_fix_storage_rls.sql  (+23 more)
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: App.tsx  (+2 more)
(+82 files in other folders)
