[project]
name = "ai-teaching-server"
version = "0.1.0"
description = "AI Teaching Agent System - Backend Server"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "supabase>=2.13.0,<2.15.0",
    "agno[agui]>=1.0.0",
    "httpx>=0.28.0",
    "loguru>=0.7.0",
    "pymupdf>=1.25.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "sqlalchemy>=2.0.48",
    "aiosqlite>=0.22.1",
    "openai>=2.26.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-bdd>=8.1.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
